# Fullstack-Todo-App

./: .gitignore  README.md
dailyDo-todo-app/: pyproject.toml
dailyDo-todo-app/src/dailydo_todo_app/: main.py  settings.py
